--- a/main.css
+++ b/main.css
@@ -120,7 +120,7 @@ body, html {
   
   .parallax {
     /* The image used */
-    background-image: url('../img/koko.jpg');
+    background-image: url('./img/koko.jpg');
   
     /* Full height */
     height: 100%; 
@@ -133,7 +133,7 @@ body, html {
   }
   .parallax2 {
     /* The image used */
-    background-image: url('../img2/kart.jpg');
+    background-image: url('./img2/kart.jpg');
   
     /* Full height */
     height: 100%; 
