--- a/main.css
+++ b/main.css
@@ -93,6 +93,8 @@ h4 {
     border-radius: 5px;
     transition: background-color 0.33s;
     animation: rubberBand 2s linear 1s 1 alternate;
+    text-align: center;
+    width: 50%;
 }
 
 .popo4 {
